--- a/asher.win/server/package.json
+++ b/asher.win/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0"
   }
 }
